# RNA-Pop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  compare_all.R  convert_to_fastq.R
src/: align.rs  bam.rs  biomarkers.rs  chain.rs  chunk_consensus.rs  compare.rs  consensus.rs  em.rs  fasta.rs  fastcon.rs  fastq.rs  fm.rs  fusion.rs  lib.rs  main.rs  persisted.rs  qc.rs  rank.rs  report.rs  sam.rs  serialize.rs
